added a level_[i] class on ULs

--- a/Resources/views/Menu/menu.html.twig
+++ b/Resources/views/Menu/menu.html.twig
@@ -1,4 +1,4 @@
-<ul {{ menu.attributes(item.attributes)|raw }}>
+<ul {{ menu.attributes(menu.getMenuAttributes(item))|raw }}>
     {% for child in item.children %}
         {% include 'KnpMenuBundle:Menu:item.html.twig' with {'item': child, 'menu': menu } %}
     {% endfor %}
